--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,20 +3,36 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" th:href="@{/style.css}"/>
-    <link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous"/>
     <title>Store</title>
 <body>
 <h1>Green Fox Fashion Web Store</h1>
+<form role="quantity"
+      th:action="@{takesToSummary}" method="post">
 <select>
-    <option value="item">Select item name</option>
-    <option th:each="cloth : ${clothes}" value="name" th:text="${cloth.itemName}"></option>
+    <option value="title">Select item name</option>
+    <option th:each="cloth : ${clothes}" value="itemName"
+            th:text="${cloth.itemName}"></option>
 </select>
 <select>
-    <option value="size">Select size</option>
-    <option value="size">Select size</option>
+    <option value="title">Select size</option>
+    <option th:each="cloth : ${clothes}" value="size"
+            th:text="${cloth.size}">Select size
+    </option>
 </select>
+
+    <div class="form-group">
+        <input type="text" class="form-control"
+               placeholder="Quantity" id="quantity"
+               name="quantity">
+    </div>
+    <a th:href="'/warehouse/summary'"
+       type="button"
+       class="btn btn-xs btn-warning">GET TOTAL</a>
+</form>
 <table>
     <tr>
         <th>Item name</th>
@@ -26,7 +42,7 @@
         <th>Unit price</th>
     </tr>
     <tbody>
-    <tr th:each="cloth : ${clothes}" >
+    <tr th:each="cloth : ${clothes}">
         <td th:text="${cloth.itemName}"></td>
         <td th:text="${cloth.manufacturer}"></td>
         <td th:text="${cloth.category}"></td>
