--- a/src/main/resources/templates/summary.html
+++ b/src/main/resources/templates/summary.html
@@ -7,8 +7,27 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous"/>
     <title>Summary</title>
+    <h1>Green Fox Fashion Web Store</h1>
 </head>
 <body>
+<table>
+    <tr>
+        <th>Item name</th>
+        <th>Manufacturer</th>
+        <th>Category</th>
+        <th>Quantity</th>
+        <th>Sub-total price</th>
+    </tr>
+    <tbody>
+    <tr th:object="${cloth}">
+        <td th:text="${cloth.itemName}"></td>
+        <td th:text="${cloth.manufacturer}"></td>
+        <td th:text="${cloth.category}"></td>
+        <td th:text="${quantity}"></td>
+        <td th:text="${cloth.unitPrice}"></td>
+    </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
